--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,12 +1,5 @@
 # App Descriptor
-appTitle=Hello World
-appDescription=A simple walkthrough app that explains the most important concepts of SAPUI5
-
-# Hello Panel
-showHelloButtonText=Say Hello
-helloMsg=Hello {0}
-homePageTitle=Walkthrough
-helloPanelTitle=Hello World
+appTitle=Vanilla SAPUI5 app
 
 # User profile
 userProfileTitle = User Profile
